Project

General

Profile

Actions

Bug #20569

closed

Instruction sequence generated from `shareable_constant_value: literal` files may not be serialized to binary

Bug #20569: Instruction sequence generated from `shareable_constant_value: literal` files may not be serialized to binary

Added by byroot (Jean Boussier) over 2 years ago. Updated over 2 years ago.

Status:
Closed
Target version:
-
[ruby-core:118268]

Description

iseq = RubyVM::InstructionSequence.compile(<<~'RUBY')
  # shareable_constant_value: literal
  REGEXP = /#{}/
RUBY
iseq.to_binary
in `to_binary': ibf_dump_object_unsupported: 0x00000001026ac8b0 [3LM    ] T_ICLASS  (NotImplementedError)

The reason is that the ISeq contains putobject RubyVM::FrozenCore so compile.c need some special handling of that hidden class.

Proposed patch: https://github.com/ruby/ruby/pull/10951

Actions

Also available in: PDF Atom